# ScholarMind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  README.md  TODO_NEXT_VERSION.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  roadmap.md  科研文献调研与整理系统.pptx
.cursor/: mcp.json
.github/workflows/: docker-publish.yml  opencode.yml  pr-review-gate.yml
apps/api/: deps.py  main.py
apps/desktop/: server.py
apps/worker/: main.py
deploy/: .env.server.example  Caddyfile  docker-compose.server-build-domain.yml  docker-compose.server-build.yml  docker-compose.server-domain.yml  docker-compose.server.yml
docs/: COURSE_PRESENTATION_GUIDE.md  CURRENT_STATE.md  FUNCTION_INVENTORY.md  PRESENTATION_DRAFT_CURRENT.md  README.md  REFERENCE_PIPELINE_NOTES.md  ScholarMind.md  TEAM_VALIDATION.md  TECH_DETAILS.md
docs/deployment/: DOCKER_DEPLOYMENT.md  PUBLIC_WEB_DEPLOYMENT.md  VPS_DOCKER_DEPLOYMENT.md
docs/plans/: README.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/scripts/: ui_smoke.mjs
infra/: docker-compose.postgres.yml  nginx.conf  nginx.web.conf.template  supervisord.web.conf
scripts/: backup.sh  batch_process_unread.py  build-desktop.sh  check_alembic.py  check_db.py  cleanup_unread.py  copy_env_from_deploy.sh  dev_setup.py  docker_deploy.sh  e2e-full.mjs  e2e-test.mjs  init_db.py  init_tags_table.py  local_bootstrap.py  scholarmind-server.spec  start_web_container.sh  test_ingest.py
tests/: test_compass_service.py  test_daily_radar_service.py  test_openreview_client.py  test_paper_ask.py  test_skim_reports.py  test_tag_repository.py  test_task_tracker.py  test_wiki_generation.py
(+92 files in other folders)
